Bug 417637: tstclnt crashes if -p option is not specified. r=julien.pierre