security/nss/cmd/tstclnt/tstclnt.c
@@ -496,7 +496,6 @@ int main(int argc, char **argv)
     PRFileDesc *       std_out;
     CERTCertDBHandle * handle;
     char *             host	=  NULL;
-    char *             port	=  "443";
     char *             certDir  =  NULL;
     char *             nickname =  NULL;
     char *             cipherString = NULL;
@@ -523,7 +522,7 @@ int main(int argc, char **argv)
     PRBool             skipProtoHeader = PR_FALSE;
     int                headerSeparatorPtrnId = 0;
     int                error = 0;
-    PRUint16           portno;
+    PRUint16           portno = 443;
     PLOptState *optstate;
     PLOptStatus optstatus;
     PRStatus prStatus;
@@ -575,7 +574,7 @@ int main(int argc, char **argv)
 
 	  case 'o': override = 1; 			break;
 
-	  case 'p': port = PORT_Strdup(optstate->value);	break;
+	  case 'p': portno = (PRUint16)atoi(optstate->value);	break;
 
 	  case 'q': pingServerFirst = PR_TRUE;          break;
 
@@ -597,8 +596,8 @@ int main(int argc, char **argv)
     if (optstatus == PL_OPT_BAD)
 	Usage(progName);
 
-    if (!host || !port) Usage(progName);
-    portno = (PRUint16)atoi(port);
+    if (!host || !portno) 
+    	Usage(progName);
 
     PR_Init( PR_SYSTEM_THREAD, PR_PRIORITY_NORMAL, 1);
 
@@ -1051,7 +1050,6 @@ int main(int argc, char **argv)
         PORT_Free(password);
     }
     PORT_Free(host);
-    PORT_Free(port);
 
     PR_Close(s);
     SSL_ClearSessionCache();
